src/objects/Servicing__c.object
<CustomObject>
    <fields>
        <fullName>Max_Borrowing_Power__c</fullName>
        <label>Max Borrowing Power</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Monthly_Surplus__c</fullName>
        <label>Net Monthly Surplus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Servicing Calculators</relationshipLabel>
        <relationshipName>Servicing_Calculators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Services_Funds_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Services Funds Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Services_Funds_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Services Funds Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Servicing Calculator</label>
    <nameField>
        <label>Servicing Calculator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Servicing Calculators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>